开团模板与开团相关功能
